--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@fastify/deepmerge": "^1.1.0",
+    "@graphql-yoga/common": "^2.12.12",
     "deepmerge": "^4.2.2",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "xstate": "^4.33.6",
     "zod": "^3.19.1"
   }
